--- a/seo-services.html
+++ b/seo-services.html
@@ -447,7 +447,7 @@
                             </div>
 
 
-                            <div class="sidebar__widget" data-aos="fade-up" data-aos-duration="2100">
+                            <!-- <div class="sidebar__widget" data-aos="fade-up" data-aos-duration="2100">
 
                                 <div class="sidebar__title">
                                     <h5>Download Brochure:</h5>
@@ -460,7 +460,7 @@
                                             class="icofont-file-document"></i></a>
                                 </div>
 
-                            </div>
+                            </div> -->
                         </div>
                         <!-- contact form -->
                         <div class="contact__input__wrapper contact__grident__bg" style="padding: 30px;">
@@ -472,6 +472,18 @@
                             </div>
                         </div>
                         <!-- contact form -->
+                            <!-- video -->
+                            <div class="breadcrumbarea-video-small" style="margin-top: 30px;">
+                                <div class="breadcrumbarea__overlay-video">
+                                    <video class="breadcrumbarea__video__element" autoplay=""
+                                        muted="" loop="">
+                                        <source src="assets/img/service/soft.mp4"
+                                            type="video/mp4">
+                                        Your browser does not support the video tag.
+                                    </video>
+                                </div>
+                            </div>
+                        
                     </div>
                     <div class="col-xl-8 col-lg-8 col-md-12 col-12">
                         <div class="service__details__wraper">
@@ -592,20 +604,7 @@
 
 
                                             <div class="row">
-                                                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-                                                    <!-- video -->
-                                                    <div class="breadcrumbarea-video-small">
-                                                        <div class="breadcrumbarea__overlay-video">
-                                                            <video class="breadcrumbarea__video__element" autoplay=""
-                                                                muted="" loop="">
-                                                                <source src="assets/img/service/soft.mp4"
-                                                                    type="video/mp4">
-                                                                Your browser does not support the video tag.
-                                                            </video>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
+                                                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
                                                     <div class="service__details__heading" data-aos="fade-up"
                                                         data-aos-duration="1500">
                                                         <h3>Analytics and Reporting</h3>
