team name fixed

--- a/wordpress-development-services.html
+++ b/wordpress-development-services.html
@@ -523,13 +523,14 @@
                                                 <h3>Customizability</h3>
                                             </div>
                                             <div class="service__details__planning__text">
-                                                <p>WordPress comes with thousands of</p>
+                                                <p>WordPress comes with thousands of themes and plugins so businesses
+                                                    can customize the platform for their business needs.</p>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <p>themes and plugins so businesses can customize the platform for their business needs.</p>
+
                             <div class="service__details__planning__heading">
                                 <h3>SEO-Friendly</h3>
                             </div>
