--- a/about.html
+++ b/about.html
@@ -434,7 +434,7 @@
                                         <img src="assets/img/team/Ahmad.png" alt="img">
                                     </div>
                                     <div class="team__member__name">
-                                        <h6><a href="javascript:void(0)">Mr. Ahmad</a></h6>
+                                        <h6>Mr. Muhammad Ahmad Raza</h6>
                                         <p>Founder & CEO</p>
                                     </div>
                                     <div class="team__member__icon">
@@ -471,12 +471,12 @@
                                         <img src="assets/img/team/tahir.png" alt="img">
                                     </div>
                                     <div class="team__member__name">
-                                        <h6><a href="javascript:void(0)">Mr. Tahir</a></h6>
+                                        <h6>Mr. Tahir</h6>
                                         <p style="margin-bottom: 0px;">Senior Principal Software Engineer
                                         </p>
                                         <p>Co-Founder</p>
                                     </div>
-                                
+
                                 </div>
                             </div>
                         </div>
@@ -489,10 +489,10 @@
                                         <img src="assets/img/team/Butt.jpeg" alt="">
                                     </div>
                                     <div class="team__member__name">
-                                        <h6><a href="javascript:void(0)">Mr. Nadeem</a></h6>
+                                        <h6>Mr. Nadeem</h6>
                                         <p>Senior Full Stack Mobile Application Developer</p>
                                     </div>
-                                  
+
                                 </div>
                             </div>
                         </div>
