--- a/team.html
+++ b/team.html
@@ -340,7 +340,7 @@
                                     <img src="assets/img/team/Ahmad.png" alt="Ahmad">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="javascript:void(0)">Mr. Ahmad</a></h6>
+                                    <h6><a href="javascript:void(0)">Mr. Muhammad Ahmad Raza</a></h6>
                                     <p>Founder & CEO</p>
                                 </div>
                                 <div class="team__member__icon">
@@ -386,7 +386,7 @@
                                     <img src="assets/img/team/Butt.jpeg" alt="Ahmad">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="javascript:void(0)">Mr. Nadeem Butt</a></h6>
+                                    <h6><a href="javascript:void(0)">Mr. Nadeem</a></h6>
                                     <p>Full Stack Mobile Application Developer</p>
                                 </div>
                             </div>
