--- a/team.html
+++ b/team.html
@@ -416,7 +416,7 @@
                                     <img src="assets/img/team/awais-ali.png" alt="img">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="javascript:void(0)">Mr. Awais</a></h6>
+                                    <h6><a href="javascript:void(0)">Mr. Awais Ali</a></h6>
                                     <p>Senior Php Laravel Developer</p>
                                 </div>
                             </div>
