--- a/network-services.html
+++ b/network-services.html
@@ -330,14 +330,11 @@
                                 <h2 class="heading">Managed IT Network Services Provider</h2>
                             </div>
                             <div class="herobanner__text">
-                                <p style="max-width: 100%;"> At Digital Minds On, we understand
-                                    the vital role of computer networking in connecting devices through servers,
-                                    routers, and switches to access the internet and exchange data seamlessly. In
-                                    today’s business landscape, networking is essential for operations of all sizes. As
-                                    organizations handle increasing amounts of data, the need for robust networking
-                                    grows. When demands exceed in-house capabilities, partnering with a managed IT
-                                    network services provider becomes a smart, cost-effective solution for maintaining
-                                    efficiency and scalability.</p>
+                                <p style="max-width: 100%;"> At Digital Minds On, we recognize the importance of
+                                    computer networking for seamless data exchange. As businesses manage growing data,
+                                    reliable networks become crucial. Partnering with a managed IT service provider
+                                    ensures cost-effective solutions, maintaining efficiency and scalability when
+                                    in-house resources fall short.</p>
                             </div>
                             <div class="banner-button">
                                 <ul class="common-button">
