--- a/about.html
+++ b/about.html
@@ -599,8 +599,8 @@
                                             <img src="assets/img/testimonial/testimonial__4.png" alt="">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="#">Mattie Warner</a></h6>
-                                            <p>Business Man</p>
+                                            <h6><a href="javascript:void(0)">Mattie Warner</a></h6>
+                                            <p>Business Woman</p>
                                         </div>
                                     </div>
                                 </div>
@@ -628,8 +628,8 @@
                                             <img src="assets/img/testimonial/testimonial__5.png" alt="">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="#">Kristin Gilbert</a></h6>
-                                            <p>Business Man</p>
+                                            <h6><a href="javascript:void(0)">Kristin Gilbert</a></h6>
+                                            <p>Business Woman</p>
                                         </div>
                                     </div>
                                 </div>
@@ -656,8 +656,8 @@
                                             <img src="assets/img/testimonial/testimonial__6.png" alt="">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="#">Arlene Miles</a></h6>
-                                            <p>Business Man</p>
+                                            <h6><a href="javascript:void(0)">Arlene Miles</a></h6>
+                                            <p>Business Woman</p>
                                         </div>
                                     </div>
                                 </div>
@@ -681,10 +681,10 @@
                                     </div>
                                     <div class="testimonial__3__author">
                                         <div class="testimonial__3__img">
-                                            <img src="assets/img/testimonial/testimonial__4.png" alt="">
+                                            <img src="assets/img/testimonial/testimonial__7.jpg" alt="">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="#">Mattie Warner</a></h6>
+                                            <h6><a href="javascript:void(0)">Richard W. Thomas</a></h6>
                                             <p>Business Man</p>
                                         </div>
                                     </div>
@@ -710,11 +710,11 @@
                                     </div>
                                     <div class="testimonial__3__author">
                                         <div class="testimonial__3__img">
-                                            <img src="assets/img/testimonial/testimonial__5.png" alt="">
+                                            <img src="assets/img/testimonial/1724692476765.jpg" alt="">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="#">Mattie Warner</a></h6>
-                                            <p>Business Man</p>
+                                            <h6><a href="javascript:void(0)">Shelley Zalis</a></h6>
+                                            <p>Business Woman</p>
                                         </div>
                                     </div>
                                 </div>
