--- a/project.html
+++ b/project.html
@@ -574,13 +574,13 @@
 
 
         <!-- testimonial__3__start -->
-        <div class="testimonial sp_bottom_160">
+        <div class="testimonial sp_top_140 sp_bottom_140">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-12" data-aos="fade-up" data-aos-duration="1500">
                         <div class="section__title text-center sp_bottom_60">
                             <div class="section__title__button">
-                                <span class="text__gradient ">Work Process</span>
+                                <span class="text__gradient ">Testimonial</span>
                             </div>
                             <div class="section__title__heading">
                                 <h3>SEE WHAT OTHER ARE <br>SAYING</h3>
@@ -616,8 +616,8 @@
                                             <img src="assets/img/testimonial/testimonial__4.png" alt="">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="#">Mattie Warner</a></h6>
-                                            <p>Business Man</p>
+                                            <h6><a href="javascript:void(0)">Mattie Warner</a></h6>
+                                            <p>Business Woman</p>
                                         </div>
                                     </div>
                                 </div>
@@ -645,8 +645,8 @@
                                             <img src="assets/img/testimonial/testimonial__5.png" alt="">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="#">Kristin Gilbert</a></h6>
-                                            <p>Business Man</p>
+                                            <h6><a href="javascript:void(0)">Kristin Gilbert</a></h6>
+                                            <p>Business Woman</p>
                                         </div>
                                     </div>
                                 </div>
@@ -673,8 +673,8 @@
                                             <img src="assets/img/testimonial/testimonial__6.png" alt="">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="#">Arlene Miles</a></h6>
-                                            <p>Business Man</p>
+                                            <h6><a href="javascript:void(0)">Arlene Miles</a></h6>
+                                            <p>Business Woman</p>
                                         </div>
                                     </div>
                                 </div>
@@ -698,10 +698,10 @@
                                     </div>
                                     <div class="testimonial__3__author">
                                         <div class="testimonial__3__img">
-                                            <img src="assets/img/testimonial/testimonial__4.png" alt="">
+                                            <img src="assets/img/testimonial/testimonial__7.jpg" alt="">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="#">Mattie Warner</a></h6>
+                                            <h6><a href="javascript:void(0)">Richard W. Thomas</a></h6>
                                             <p>Business Man</p>
                                         </div>
                                     </div>
@@ -727,11 +727,11 @@
                                     </div>
                                     <div class="testimonial__3__author">
                                         <div class="testimonial__3__img">
-                                            <img src="assets/img/testimonial/testimonial__5.png" alt="">
+                                            <img src="assets/img/testimonial/1724692476765.jpg" alt="">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="#">Mattie Warner</a></h6>
-                                            <p>Business Man</p>
+                                            <h6><a href="javascript:void(0)">Shelley Zalis</a></h6>
+                                            <p>Business Woman</p>
                                         </div>
                                     </div>
                                 </div>
