--- a/error.html
+++ b/error.html
@@ -306,7 +306,7 @@
                             </div>
                             <div class="breadcrumbarea__inner">
                                 <ul>
-                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="/">Home</a></li>
                                     <li>// </li>
                                     <li> Error </li>
                                 </ul>
@@ -340,7 +340,7 @@
                             <h3> <span class="text__gradient">Lost In The Filed?</span> Let us help you find your way
                                 back.</h3>
                             <div class="error__button">
-                                <a class="default__button" href="#">SEND MESSAGE</a>
+                                <a class="default__button" href="javascript:void(0)">SEND MESSAGE</a>
                             </div>
                         </div>
 
