--- a/project.html
+++ b/project.html
@@ -317,7 +317,7 @@
                     <div class="col-xl-12" data-aos="fade-up" data-aos-duration="1500">
                         <div class="breadcrumbarea__content__wraper">
                             <div class="breadcrumbarea__title">
-                                <h2 class="heading">All Project </h2>
+                                <h2 class="heading">All Projects </h2>
                             </div>
                             <div class="breadcrumbarea__inner">
                                 <ul>
