--- a/error.html
+++ b/error.html
@@ -523,13 +523,14 @@
         </div>
         <!-- footer__section__end -->
 
-        <!-- back to top -->
-        <a href="#top" class="back-to-top" id="backToTop">
+          <!-- back to top -->
+          <a class="back-to-top" id="backToTop">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                 stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-up">
                 <path d="M12 19V6M5 12l7-7 7 7" />
             </svg>
         </a>
+
         <!-- back to top -->
 
 
@@ -557,6 +558,26 @@
         if (localStorage.getItem("theme-color") === "light") {
             document.getElementById("light--to-dark-button")?.classList.remove("dark--mode");
         } 
+    </script>
+    <!-- backto top -->
+      <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            const backToTopButton = document.getElementById("backToTop");
+            window.addEventListener("scroll", () => {
+                if (window.scrollY > 200) {
+                    backToTopButton.classList.add("show");
+                } else {
+                    backToTopButton.classList.remove("show");
+                }
+            });
+            backToTopButton.addEventListener("click", (e) => {
+                e.preventDefault();
+                window.scrollTo({
+                    top: 0,
+                    behavior: "smooth",
+                });
+            });
+        });
     </script>
 
 
