--- a/index.html
+++ b/index.html
@@ -1126,7 +1126,11 @@
                                 <span class="text__gradient ">Testimonial</span>
                             </div>
                             <div class="section__title__heading">
-                                <h3>SEE WHAT OTHER ARE <br>SAYING</h3>
+                                <h3>INSPIRING TESTIMONIALS FROM HAPPY CLIENTS</h3>
+                            </div>
+                            <div class="section__title__text">
+                                <p>Digital Minds On Inspiring testimonials from happy clients who have experienced
+                                    transformative results. Discover how our expertise is making a real difference</p>
                             </div>
 
                         </div>
