--- a/about.html
+++ b/about.html
@@ -877,7 +877,7 @@
                                 <div class="footer__icon">
                                     <ul>
                                         <li>
-                                            <a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2Fdifitalmindson"
+                                            <a href="https://web.facebook.com/people/Digital-Minds-On/61565893842788/"
                                                 target="_blank">
                                                 <i class="icofont-facebook"></i>
                                             </a>
@@ -920,7 +920,7 @@
                                             <a href="services">Our services</a>
                                         </li>
                                         <li>
-                                            <a href="javascript:void(0);">Testimonial</a>
+                                            <a href="team">Team</a>
                                         </li>
                                     </ul>
                                 </div>
