--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description"
         content="Digital Minds On offers expert graphic design and web development services, helping businesses create stunning visuals and build dynamic, user-friendly websites.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <meta name="google-site-verification" content="-_ZrhZCdztaNLH4pipNSt_2lcMkOG-R4WaORMjFcjM4" />
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
     <!-- Place favicon.ico in the root directory -->
     <!-- CSS here -->
@@ -1505,7 +1505,7 @@
                                 <div class="footer__icon">
                                     <ul>
                                         <li>
-                                            <a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2Fdifitalmindson"
+                                            <a href="https://web.facebook.com/people/Digital-Minds-On/61565893842788/"
                                                 target="_blank">
                                                 <i class="icofont-facebook"></i>
                                             </a>
@@ -1548,7 +1548,7 @@
                                             <a href="services">Our services</a>
                                         </li>
                                         <li>
-                                            <a href="javascript:void(0);">Testimonial</a>
+                                            <a href="team">Team</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -1583,13 +1583,16 @@
                         <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12" data-aos="fade-up" data-aos-duration="3000">
                             <div class="footer__widget footer__right">
                                 <div class="footer__menu__title">
-                                    <h6>SUBSCRIP NEWSLETTER :</h6>
+                                    <h6>Let's discuss your project :</h6>
                                 </div>
-                                <div class="footer__input">
-                                    <input type="text" placeholder="Enter your email:">
+                                <div class="footer__text">
+                                    <p>
+                                        Send us a message or schedule a meeting on WhatsApp below, and let's take the
+                                        first step toward creating your product.</p>
+
                                 </div>
                                 <div class="footer__bottom">
-                                    <a class="default__button" href="javascript:void(0);">SUBSCRIBE NOW</a>
+                                    <a class="default__button" href="contact">CONTACT US</a>
                                 </div>
                             </div>
                         </div>
