--- a/service-sample.html
+++ b/service-sample.html
@@ -590,7 +590,7 @@
                                 <div class="footer__icon">
                                     <ul>
                                         <li>
-                                            <a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2Fdifitalmindson"
+                                            <a href="https://web.facebook.com/people/Digital-Minds-On/61565893842788/"
                                                 target="_blank">
                                                 <i class="icofont-facebook"></i>
                                             </a>
@@ -633,7 +633,7 @@
                                             <a href="services">Our services</a>
                                         </li>
                                         <li>
-                                            <a href="javascript:void(0);">Testimonial</a>
+                                            <a href="team">Team</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -668,13 +668,16 @@
                         <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12" data-aos="fade-up" data-aos-duration="3000">
                             <div class="footer__widget footer__right">
                                 <div class="footer__menu__title">
-                                    <h6>SUBSCRIP NEWSLETTER :</h6>
+                                    <h6>Let's discuss your project :</h6>
                                 </div>
-                                <div class="footer__input">
-                                    <input type="text" placeholder="Enter your email:">
+                                <div class="footer__text">
+                                    <p>
+                                        Send us a message or schedule a meeting on WhatsApp below, and let's take the
+                                        first step toward creating your product.</p>
+
                                 </div>
                                 <div class="footer__bottom">
-                                    <a class="default__button" href="javascript:void(0);">SUBSCRIBE NOW</a>
+                                    <a class="default__button" href="contact">CONTACT US</a>
                                 </div>
                             </div>
                         </div>
