--- a/services.html
+++ b/services.html
@@ -393,8 +393,9 @@
 
                                 </div>
                                 <div class="service__icon service__icon--2">
-                                    <a class="direction__btn" href="web-development-services"><svg width="34" height="34"
-                                            viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <a class="direction__btn" href="web-development-services"><svg width="34"
+                                            height="34" viewBox="0 0 34 34" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                                 stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
                                                 stroke-linejoin="round" />
@@ -428,8 +429,9 @@
 
                                 </div>
                                 <div class="service__icon service__icon--2">
-                                    <a class="direction__btn" href="mobile-app-development-services"><svg width="34" height="34"
-                                            viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <a class="direction__btn" href="mobile-app-development-services"><svg width="34"
+                                            height="34" viewBox="0 0 34 34" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                                 stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
                                                 stroke-linejoin="round" />
@@ -462,8 +464,9 @@
 
                                 </div>
                                 <div class="service__icon service__icon--2">
-                                    <a class="direction__btn " href="software-development-services"><svg width="34" height="34"
-                                            viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <a class="direction__btn " href="software-development-services"><svg width="34"
+                                            height="34" viewBox="0 0 34 34" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                                 stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
                                                 stroke-linejoin="round" />
@@ -495,8 +498,9 @@
 
                                 </div>
                                 <div class="service__icon service__icon--2">
-                                    <a class="direction__btn" href="game-development-services"><svg width="34" height="34"
-                                            viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <a class="direction__btn" href="game-development-services"><svg width="34"
+                                            height="34" viewBox="0 0 34 34" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                                 stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
                                                 stroke-linejoin="round" />
@@ -529,8 +533,9 @@
 
                                 </div>
                                 <div class="service__icon service__icon--2">
-                                    <a class="direction__btn" href="wordpress-development-services"><svg width="34" height="34"
-                                            viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <a class="direction__btn" href="wordpress-development-services"><svg width="34"
+                                            height="34" viewBox="0 0 34 34" fill="none"
+                                            xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                                 stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
                                                 stroke-linejoin="round" />
@@ -919,7 +924,7 @@
                                 <div class="footer__icon">
                                     <ul>
                                         <li>
-                                            <a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2Fdifitalmindson"
+                                            <a href="https://web.facebook.com/people/Digital-Minds-On/61565893842788/"
                                                 target="_blank">
                                                 <i class="icofont-facebook"></i>
                                             </a>
@@ -962,7 +967,7 @@
                                             <a href="services">Our services</a>
                                         </li>
                                         <li>
-                                            <a href="javascript:void(0);">Testimonial</a>
+                                            <a href="team">Team</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -997,13 +1002,16 @@
                         <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12" data-aos="fade-up" data-aos-duration="3000">
                             <div class="footer__widget footer__right">
                                 <div class="footer__menu__title">
-                                    <h6>SUBSCRIP NEWSLETTER :</h6>
+                                    <h6>Let's discuss your project :</h6>
                                 </div>
-                                <div class="footer__input">
-                                    <input type="text" placeholder="Enter your email:">
+                                <div class="footer__text">
+                                    <p>
+                                        Send us a message or schedule a meeting on WhatsApp below, and let's take the
+                                        first step toward creating your product.</p>
+
                                 </div>
                                 <div class="footer__bottom">
-                                    <a class="default__button" href="javascript:void(0);">SUBSCRIBE NOW</a>
+                                    <a class="default__button" href="contact">CONTACT US</a>
                                 </div>
                             </div>
                         </div>
