--- a/web-development-services.html
+++ b/web-development-services.html
@@ -328,7 +328,8 @@
                                     <h2 class="heading">Web Development Services</h2>
                                 </div>
                                 <div class="herobanner__text">
-                                    <p style="max-width: 950px;"> Digital Minds On, a leading web development company, to
+                                    <p style="max-width: 950px;"> Digital Minds On, a leading web development company,
+                                        to
                                         create high-performance websites. We specialize in custom UX/UI design, complex
                                         animations, and optimization for enhanced user experience, search, and
                                         conversions. Our end-to-end services ensure seamless integration and
@@ -580,7 +581,7 @@
 
 
                         </div>
-                  
+
                     </div>
                 </div>
                 <div class="service__details__planning" data-aos="fade-up" data-aos-duration="1500">
@@ -966,7 +967,7 @@
                                 <div class="footer__icon">
                                     <ul>
                                         <li>
-                                            <a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2Fdifitalmindson"
+                                            <a href="https://web.facebook.com/people/Digital-Minds-On/61565893842788/"
                                                 target="_blank">
                                                 <i class="icofont-facebook"></i>
                                             </a>
@@ -1009,7 +1010,7 @@
                                             <a href="services">Our services</a>
                                         </li>
                                         <li>
-                                            <a href="javascript:void(0);">Testimonial</a>
+                                            <a href="team">Team</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -1044,13 +1045,16 @@
                         <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12" data-aos="fade-up" data-aos-duration="3000">
                             <div class="footer__widget footer__right">
                                 <div class="footer__menu__title">
-                                    <h6>SUBSCRIP NEWSLETTER :</h6>
+                                    <h6>Let's discuss your project :</h6>
                                 </div>
-                                <div class="footer__input">
-                                    <input type="text" placeholder="Enter your email:">
+                                <div class="footer__text">
+                                    <p>
+                                        Send us a message or schedule a meeting on WhatsApp below, and let's take the
+                                        first step toward creating your product.</p>
+
                                 </div>
                                 <div class="footer__bottom">
-                                    <a class="default__button" href="javascript:void(0);">SUBSCRIBE NOW</a>
+                                    <a class="default__button" href="contact">CONTACT US</a>
                                 </div>
                             </div>
                         </div>
