--- a/network-services.html
+++ b/network-services.html
@@ -507,7 +507,7 @@
                                         <div class="breadcrumbarea-video-small">
                                             <div class="breadcrumbarea__overlay-video">
                                                 <video class="breadcrumbarea__video__element" autoplay="" muted=""
-                                                    loop="">
+                                                    loop="" style="border-radius: 20px;">
                                                     <source src="assets/img/service/soft.mp4" type="video/mp4">
                                                     Your browser does not support the video tag.
                                                 </video>
