--- a/seo-services.html
+++ b/seo-services.html
@@ -475,7 +475,7 @@
                         <!-- video -->
                         <div class="breadcrumbarea-video-small" style="margin-top: 30px;">
                             <div class="breadcrumbarea__overlay-video">
-                                <video class="breadcrumbarea__video__element" autoplay="" muted="" loop="">
+                                <video class="breadcrumbarea__video__element" autoplay="" muted="" loop="" style="border-radius: 20px;">
                                     <source src="assets/img/service/soft.mp4" type="video/mp4">
                                     Your browser does not support the video tag.
                                 </video>
