--- a/ui-ux-design.html
+++ b/ui-ux-design.html
@@ -495,10 +495,13 @@
                                 <div class="row">
                                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                                         <div class="breadcrumbarea-video-small">
-                                            <video class="breadcrumbarea__video__element" autoplay="" muted="" loop="">
-                                                <source src="assets/img/service/Video/uidesin.mp4" type="video/mp4">
-                                                Your browser does not support the video tag.
-                                            </video>
+                                            <div class="breadcrumbarea__overlay-video">
+                                                <video class="breadcrumbarea__video__element" autoplay="" muted=""
+                                                    loop="" style="border-radius: 20px;">
+                                                    <source src="assets/img/service/Video/uidesin.mp4" type="video/mp4">
+                                                    Your browser does not support the video tag.
+                                                </video>
+                                            </div>
                                         </div>
 
                                     </div>
