--- a/web-development-services.html
+++ b/web-development-services.html
@@ -479,7 +479,7 @@
                         <div class="col-md-12 mt-4">
                             <div class="breadcrumbarea-video-small">
                                 <div class="breadcrumbarea__overlay-video">
-                                    <video class="breadcrumbarea__video__element" autoplay="" muted="" loop="">
+                                    <video class="breadcrumbarea__video__element" autoplay="" muted="" loop="" style="border-radius: 20px;">
                                         <source src="assets/img/service/custom-web.mp4" type="video/mp4">
                                         Your browser does not support the video tag.
                                     </video>
@@ -515,7 +515,7 @@
                                         <div class="breadcrumbarea-video-small">
                                             <div class="breadcrumbarea__overlay-video">
                                                 <video class="breadcrumbarea__video__element" autoplay="" muted=""
-                                                    loop="">
+                                                    loop="" style="border-radius: 20px;">
                                                     <source src="assets/img/service/soft.mp4" type="video/mp4">
                                                     Your browser does not support the video tag.
                                                 </video>
