--- a/wordpress-development-services.html
+++ b/wordpress-development-services.html
@@ -313,7 +313,7 @@
         <div class="breadcrumbarea-video">
             <div class="breadcrumbarea__overlay">
                 <video class="breadcrumbarea__video__element" autoplay="" muted="" loop="">
-                    <source src="assets/img/service/Video/wordpress.mp4" type="video/mp4">
+                    <source src="assets/img/service/Video/wordpress/WhatsApp Video 2024-12-04 at 7.31.02 AM.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
@@ -502,7 +502,7 @@
                                         <div class="breadcrumbarea-video-small">
                                             <div class="breadcrumbarea__overlay-video">
                                                 <video class="breadcrumbarea__video__element" autoplay="" muted=""
-                                                    loop="">
+                                                    loop="" style="border-radius: 20px;">
                                                     <source src="assets/img/service/soft.mp4" type="video/mp4">
                                                     Your browser does not support the video tag.
                                                 </video>
