--- a/about.html
+++ b/about.html
@@ -440,14 +440,13 @@
                                     <div class="team__member__icon">
                                         <ul>
                                             <li>
-                                                <a class="direction__btn"
-                                                    href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2Fdifitalmindson"
+                                                <a class="direction__btn" href="https://web.facebook.com/people/Digital-Minds-On/61565893842788/"
                                                     target="_blank">
                                                     <i class="icofont-facebook"></i>
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="https://www.instagram.com/digitalmindson/" target="_blank">
+                                                <a class="direction__btn" href="https://www.instagram.com/digitalmindson/" target="_blank">
                                                     <i class="icofont-instagram"></i>
                                                 </a>
                                             </li>
