--- a/team.html
+++ b/team.html
@@ -346,15 +346,18 @@
                                 <div class="team__member__icon">
                                     <ul>
                                         <li>
-                                            <a class="direction__btn" href="javascript:avoid()"><i
-                                                    class="icofont-facebook"></i></a>
+                                            <a class="direction__btn" href="https://web.facebook.com/people/Digital-Minds-On/61565893842788/"
+                                                target="_blank">
+                                                <i class="icofont-facebook"></i>
+                                            </a>
                                         </li>
                                         <li>
-                                            <a class="direction__btn" href="javascript:avoid()"><i
-                                                    class="icofont-twitter"></i></a>
+                                            <a class="direction__btn" href="https://www.instagram.com/digitalmindson/" target="_blank">
+                                                <i class="icofont-instagram"></i>
+                                            </a>
                                         </li>
                                         <li>
-                                            <a class="direction__btn" href="javascript:avoid()"><i
+                                            <a class="direction__btn" href="skype:live:.cid.a40e7b5b65a42e46?chat" target="_blank"><i
                                                     class="icofont-skype"></i></a>
                                         </li>
                                     </ul>
@@ -502,7 +505,7 @@
                         <div class="team__member__3__single team__member__border text-center single__transform">
                             <div class="team__member__3__single__inner" style="height: 385px;">
                                 <div class="team__member__3__img">
-                                    <img src="assets/img/team/awaisraza.jpg" alt="">
+                                    <img src="assets/img/team/awais_ch.png" alt="img">
                                 </div>
                                 <div class="team__member__name">
                                     <h6><a href="javascript:void(0)">Mr. Awais</a></h6>
