--- a/index.html
+++ b/index.html
@@ -1053,7 +1053,7 @@
                             <div class="project__section__img text__end">
                                 <div class="bastun__brand__badge">
                                     <div class="bastun__brand__badge__inner position-relative">
-                                        <a href="index.html">
+                                        <a href="/">
                                             <img class="bbb__animate" src="assets/img/project/project__1.png"
                                                 alt="Footer badge">
                                             <img class="bbb__icon" src="assets/img/logo/logo/icon.svg"
