teame name fixed

--- a/team.html
+++ b/team.html
@@ -346,19 +346,21 @@
                                 <div class="team__member__icon">
                                     <ul>
                                         <li>
-                                            <a class="direction__btn" href="https://web.facebook.com/people/Digital-Minds-On/61565893842788/"
+                                            <a class="direction__btn"
+                                                href="https://web.facebook.com/people/Digital-Minds-On/61565893842788/"
                                                 target="_blank">
                                                 <i class="icofont-facebook"></i>
                                             </a>
                                         </li>
                                         <li>
-                                            <a class="direction__btn" href="https://www.instagram.com/digitalmindson/" target="_blank">
+                                            <a class="direction__btn" href="https://www.instagram.com/digitalmindson/"
+                                                target="_blank">
                                                 <i class="icofont-instagram"></i>
                                             </a>
                                         </li>
                                         <li>
-                                            <a class="direction__btn" href="skype:live:.cid.a40e7b5b65a42e46?chat" target="_blank"><i
-                                                    class="icofont-skype"></i></a>
+                                            <a class="direction__btn" href="skype:live:.cid.a40e7b5b65a42e46?chat"
+                                                target="_blank"><i class="icofont-skype"></i></a>
                                         </li>
                                     </ul>
                                 </div>
@@ -375,7 +377,10 @@
                                 </div>
                                 <div class="team__member__name">
                                     <h6><a href="javascript:void(0)">Mr. Tahir</a></h6>
-                                    <p>Principal Software Engineer / Co-Founder</p>
+                                    <div class="Details">
+                                        <p style="margin: 0px;">Principal Software Engineer</p>
+                                        <p>Co-Founder</p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -390,7 +395,8 @@
                                 </div>
                                 <div class="team__member__name">
                                     <h6><a href="javascript:void(0)">Mr. Nadeem</a></h6>
-                                    <p>Full Stack Mobile Application Developer</p>
+                                    <p style="margin: 0px;">Full Stack Mobile Application Developer</p>
+                                    <p>CTO</p>
                                 </div>
                             </div>
                         </div>
@@ -404,7 +410,8 @@
                                 </div>
                                 <div class="team__member__name">
                                     <h6><a href="javascript:void(0)">Mr. Abdul Rahman</a></h6>
-                                    <p>Senior Mobile and Web UI/UX Designer</p>
+                                    <p style="margin: 0px;">Senior Mobile and Web UI/UX Designer</p>
+                                    <p>Team Lead</p>
                                 </div>
 
                             </div>
@@ -420,7 +427,9 @@
                                 </div>
                                 <div class="team__member__name">
                                     <h6><a href="javascript:void(0)">Mr. Awais Ali</a></h6>
-                                    <p>Senior Php Laravel Developer</p>
+                                    <p style="margin: 0px;">Senior Php Laravel Developer</p>
+                                    <p>Team Lead</p>
+
                                 </div>
                             </div>
                         </div>
@@ -435,7 +444,9 @@
                                 </div>
                                 <div class="team__member__name">
                                     <h6><a href="javascript:void(0)">Mr. Daniyal Amjad</a></h6>
-                                    <p>Senior Full Stack React.js Developer</p>
+                                    <p style="margin: 0px;">Senior Full Stack React.js Developer</p>
+                                    <p>Product Manager</p>
+
                                 </div>
                             </div>
                         </div>
