--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div id="back__preloader">
         <div id="back__circle_loader"></div>
         <div class="back__loader_logo">
-            <img loading="lazy" src="assets/img/logo/icon.svg" alt="Preload" loading="lazy">
+            <img loading="lazy" src="assets/img/logo/icon.svg" alt="Preload">
         </div>
     </div>
     <!-- pre loader area end -->
@@ -760,7 +760,7 @@
                                     <span>29</span>
                                     <p>Years Experience</p>
                                     <div class="about__number__icon">
-                                        <a href="#"> <svg width="34" height="34" viewBox="0 0 34 34" fill="none"
+                                        <a href="about"> <svg width="34" height="34" viewBox="0 0 34 34" fill="none"
                                                 xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574"
                                                     stroke="#0A0624" stroke-width="1.5" stroke-miterlimit="10"
