team member add

--- a/team.html
+++ b/team.html
@@ -472,11 +472,11 @@
                         <div class="team__member__3__single team__member__border text-center single__transform">
                             <div class="team__member__3__single__inner" style="height: 385px;">
                                 <div class="team__member__3__img">
-                                    <img src="assets/img/team/tayyab.png" alt="img">
+                                    <img src="assets/img/team/ahmad-fareed.png" alt="img">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6>Mr. Tayyab Karamat</h6>
-                                    <p>Software Assurance Quality</p>
+                                    <h6>Mr. Ahmad Fareed</h6>
+                                    <p>Senior UI/UX Designer</p>
                                 </div>
 
                             </div>
@@ -492,12 +492,26 @@
                                 </div>
                                 <div class="team__member__name">
                                     <h6>Mr. Hamid Raza</h6>
-                                    <p>Senior UI/UX Designer</p>
+                                    <p>UI/UX Designer</p>
                                 </div>
                             </div>
                         </div>
                     </div>
+                    <div class="col-xxl-3 col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up"
+                    data-aos-duration="2100">
+                    <div class="team__member__3__single team__member__border text-center single__transform">
+                        <div class="team__member__3__single__inner" style="height: 385px;">
+                            <div class="team__member__3__img">
+                                <img src="assets/img/team/tayyab.png" alt="img">
+                            </div>
+                            <div class="team__member__name">
+                                <h6>Mr. Tayyab Karamat</h6>
+                                <p>Software Assurance Quality</p>
+                            </div>
 
+                        </div>
+                    </div>
+                </div>
                     <div class="col-xxl-3 col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up"
                         data-aos-duration="2500">
                         <div class="team__member__3__single text-center team__member__border single__transform">
