--- a/services.html
+++ b/services.html
@@ -369,7 +369,7 @@
 
         <!-- service__section__start -->
         <div class="service__2 sp_top_140 sp_bottom_70 special__spacing" id="service__area"
-            style="background: var(--pinkcolor) url(img/service/service__bg__5.png);">
+            style="background: var(--pinkcolor) url(assets/img/service/service__bg__5.png); background-repeat: no-repeat; background-size: cover;">
             <div class="container">
 
                 <div class="row">
